<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D4E6FF">

    <ImageView
        android:id="@+id/titleImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="148dp"
        android:contentDescription="@string/title_image_desc"
        android:src="@drawable/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:layout_width="259dp"
        android:layout_height="234dp"
        android:layout_gravity="center"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.442">

        <ImageView
            android:id="@+id/image1"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginStart="-50dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/tennisCard"
            android:rotation="-30"
            android:src="@drawable/tennis" />

        <ImageView
            android:id="@+id/image2"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginStart="0dp"
            android:layout_marginTop="-20dp"
            android:contentDescription="@string/singballCard"
            android:rotation="-10"
            android:src="@drawable/singball" />

        <ImageView
            android:id="@+id/image3"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginStart="60dp"
            android:layout_marginTop="-30dp"
            android:contentDescription="@string/paletteCard"
            android:rotation="5"
            android:src="@drawable/palette" />

        <ImageView
            android:id="@+id/image4"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="80dp"
            android:contentDescription="@string/heartCard"
            android:rotation="10"
            android:src="@drawable/heart" />

    </FrameLayout>

    <Button
        android:id="@+id/startButton"
        android:layout_width="264dp"
        android:layout_height="60dp"
        android:backgroundTint="#1c1c1c"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleImage"
        app:layout_constraintVertical_bias="0.64" />

</androidx.constraintlayout.widget.ConstraintLayout>